--- a/springBootMongo.yml
+++ b/springBootMongo.yml
@@ -23,7 +23,7 @@ spec:
         app: springboot
     spec:
       containers:
-      - image: venkataswethadocker/spring-boot-mongo
+      - image: venkataswethadocker/spring-boot-mongo:v1.0
         name: springboot
         ports:
         - containerPort: 8080  
